--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Desafio03</string>
     <string name="label_published_date">Published:</string>
     <string name="label_price">Price:</string>
     <string name="label_pages">Pages:</string>
